# Flickable

./: .gitignore  AudioDeviceSelector.qml  BackButton.qml  CMakeLists.txt  CustomGrid.qml  DebugBox.qml  GridBlock.qml  IterationSelector.qml  Keyboard.qml  KeyboardNote.qml  Main.qml  MainMenu.qml  NoteActivation.qml  Octave.qml  PianoRoll.qml  README.md  RecordingScreen.qml  SongLoadingScreen.qml  TranscriptionWaitingScreen.qml  Triangle.qml  activation_postprocessing.c  activations.c  activations.h  dictionary.c  dictionary.h  domain_adaptation.c  domain_adaptation.h  dynamicarray.h  evaluation.c  evaluation.h  full_transcription.c  full_transcription.h  main.cpp  matrix.c  matrix.h  midifile.c  midifile.h  note_transcription.c  spectrogram.c  stft.c  (+4 more)
